# house-generator

./: .gitignore  CMakeLists.txt  README.md  file-structure.md  house_generator  main  overview-of-project.md  plan.md
.cursor/plans/: next_layout_phases_498d77f3.plan.md
include/models/: Bathroom.h  Bedroom.h  Grid.h  House.h  Kitchen.h  LayoutRequest.h  Livingroom.h  Position.h  Room.h
include/systems/: DimensionGenerator.h  DimensionOutput.h  LayoutGenerator.h  LayoutOutput.h  Position.h  RuleValidator.h
logic-plans/: classes-ideas.md  file-structure.md  grid-layout-logic.md  house-rules-logic.md  improvement-plans.md  input-logic.md  math.md  output.md  things-to-do.md
main.dSYM/Contents/Resources/DWARF/: main
src/: main.cpp
src/models/: Bathroom.cpp  Bedroom.cpp  House.cpp  Kitchen.cpp  Livingroom.cpp  Position.cpp  Room.cpp
src/systems/: DimensionGenerator.cpp  DimensionOutput.cpp  LayoutGenerator.cpp  LayoutOutput.cpp  Position.cpp  RuleValidator.cpp
