cmake_minimum_required(VERSION 3.16)

project(house_generator LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE HOUSE_GENERATOR_SOURCES CONFIGURE_DEPENDS
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

add_executable(main ${HOUSE_GENERATOR_SOURCES})

target_include_directories(main PRIVATE
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

